--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="notification__content">
           <div class="notification__card">
             <div class="notification__avatar">
-              <img src="assets/images/avatar-mark-webber.webp" alt="" class="avatar">
+              <img src="./assets/images/avatar-mark-webber.webp" alt="" class="avatar">
             </div>
             <div class="notification__box">
               <div class="notification__text">
@@ -53,7 +53,7 @@
           </div>
           <div class="notification__card">
             <div class="notification__avatar">
-              <img src="assets/images/avatar-angela-gray.webp" alt="" class="avatar">
+              <img src="./assets/images/avatar-angela-gray.webp" alt="" class="avatar">
             </div>
             <div class="notification__box">
               <div class="notification__text">
@@ -66,7 +66,7 @@
           </div>
           <div class="notification__card">
             <div class="notification__avatar">
-              <img src="assets/images/avatar-jacob-thompson.webp" alt="" class="avatar">
+              <img src="./assets/images/avatar-jacob-thompson.webp" alt="" class="avatar">
             </div>
             <div class="notification__box">
               <div class="notification__text">
@@ -81,7 +81,7 @@
 
           <div class="notification__card read">
             <div class="notification__avatar">
-              <img src="assets/images/avatar-rizky-hasanuddin.webp" alt="" class="avatar">
+              <img src="./assets/images/avatar-rizky-hasanuddin.webp" alt="" class="avatar">
             </div>
             <div class="notification__box">
               <div class="notification__text">
@@ -97,7 +97,7 @@
           </div>
           <div class="notification__card read">
             <div class="notification__avatar">
-              <img src="assets/images/avatar-kimberly-smith.webp" alt="" class="avatar">
+              <img src="./assets/images/avatar-kimberly-smith.webp" alt="" class="avatar">
             </div>
             <div class="notification__box">
               <div class="notification__text">
@@ -107,12 +107,12 @@
               <div class="notification__time">1 week ago</div>
             </div>
             <div class="notification__image">
-              <img src="assets/images/image-chess.webp" alt="">
+              <img src="./assets/images/image-chess.webp" alt="">
             </div>
           </div>
           <div class="notification__card read">
             <div class="notification__avatar">
-              <img src="assets/images/avatar-nathan-peterson.webp" alt="" class="avatar">
+              <img src="./assets/images/avatar-nathan-peterson.webp" alt="" class="avatar">
             </div>
             <div class="notification__box">
               <div class="notification__text">
@@ -125,7 +125,7 @@
           </div>
           <div class="notification__card read">
             <div class="notification__avatar">
-              <img src="assets/images/avatar-anna-kim.webp" alt="" class="avatar">
+              <img src="./assets/images/avatar-anna-kim.webp" alt="" class="avatar">
             </div>
             <div class="notification__box">
               <div class="notification__text">
