--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
             </div>
             <div class="notification__box">
               <div class="notification__text">
-                <span class="notification__text-user">Mark Webber</span>
+                <a href="javascript:void(0)" class="notification__text-user">Mark Webber</a>
                 <span>reacted to your recent post</span>
-                <span class="notification__text-link">My first tournament today!</span>
+                <a href="javascript:void(0)" class="notification__text-link">My first tournament today!</a>
                 <span class="notification__text-unread"></span>
               </div>
               <div class="notification__time">1m ago</div>
@@ -57,7 +57,7 @@
             </div>
             <div class="notification__box">
               <div class="notification__text">
-                <span class="notification__text-user">Angela Gray</span>
+                <a href="javascript:void(0)" class="notification__text-user">Angela Gray</a>
                 <span> followed you</span>
                 <span class="notification__text-unread"></span>
               </div>
@@ -70,9 +70,9 @@
             </div>
             <div class="notification__box">
               <div class="notification__text">
-                <span class="notification__text-user">Jacob Thompson</span>
+                <a href="javascript:void(0)" class="notification__text-user">Jacob Thompson</a>
                 <span>has joined your group</span>
-                <span class="notification__text-link">Chess Club</span>
+                <a href="javascript:void(0)" class="notification__text-link">Chess Club</a>
                 <span class="notification__text-unread"></span>
               </div>
               <div class="notification__time"> 1 day ago</div>
@@ -85,7 +85,7 @@
             </div>
             <div class="notification__box">
               <div class="notification__text">
-                <span class="notification__text-user"> Rizky Hasanuddinn</span>
+                <a href="javascript:void(0)" class="notification__text-user"> Rizky Hasanuddinn</a>
                 <span>sent you a private message</span>
               </div>
               <div class="notification__time"> 5 days ago</div>
@@ -101,7 +101,7 @@
             </div>
             <div class="notification__box">
               <div class="notification__text">
-                <span class="notification__text-user">Kimberly Smith</span>
+                <a href="javascript:void(0)" class="notification__text-user">Kimberly Smith</a>
                 <span>commented on your picture</span>
               </div>
               <div class="notification__time">1 week ago</div>
@@ -116,9 +116,9 @@
             </div>
             <div class="notification__box">
               <div class="notification__text">
-                <span class="notification__text-user">Nathan Peterson</span>
+                <a href="javascript:void(0)" class="notification__text-user">Nathan Peterson</a>
                 <span>reacted to your recent post</span>
-                <span class="notification__text-link">5 end-game strategies to increase your win rate</span>
+                <a href="javascript:void(0)" class="notification__text-link">5 end-game strategies to increase your win rate</a>
               </div>
               <div class="notification__time">2 weeks ago</div>
             </div>
@@ -129,9 +129,9 @@
             </div>
             <div class="notification__box">
               <div class="notification__text">
-                <span class="notification__text-user">Anna Kim</span>
+                <a href="javascript:void(0)" class="notification__text-user">Anna Kim</a>
                 <span>left the group</span>
-                <span class="notification__text-link">Chess Club</span>
+                <a href="javascript:void(0)" class="notification__text-link">Chess Club</a>
               </div>
               <div class="notification__time">2 weeks ago</div>
             </div>
